# gta2_sty_browser

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QSprite.cpp  QSprite.h  README.md  Style.cpp  Style.h  main.cpp
